--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -1574,7 +1574,7 @@ preloader
   width: 100%;
   height: 15px;
   border-radius: 5px;  
-  background: #ffffff;
+  background: #d3d3d3;
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
@@ -1587,7 +1587,7 @@ preloader
   width: 25px;
   height: 25px;
   border-radius: 50%; 
-  background: #04AA6D;
+  background: #ffffff;
   cursor: pointer;
 }
 
@@ -1595,6 +1595,6 @@ preloader
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #04AA6D;
+  background: #ffffff;
   cursor: pointer;
 }
