--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -1573,6 +1573,7 @@ preloader
 .slider {
   -webkit-appearance: none;  /* Override default CSS styles */
   appearance: none;
+  height: 1vh; /* Specified height */
   background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
   opacity: 0.9; /* Set transparency (for mouse-over effects on hover) */
@@ -1589,11 +1590,15 @@ preloader
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
+  width: 1vh; /* Set a specific slider handle width */
+  height: 1vh; /* Slider handle height */
   background: #FFFFFF; /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
+  width: 1vh; /* Set a specific slider handle width */
+  height: 1vh; /* Slider handle height */
   background: #FFFFFF; /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
