--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -1393,8 +1393,6 @@ select.contact-field option.st
   font-size: 14px;
   border: none;
   outline: none;
-  padding-left: 20px;
-  padding-right: 20px;
   border-radius: 0px;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -1575,7 +1573,7 @@ preloader
   appearance: none;
   height: 2vh; /* Specified height */
   border-radius: 0.4hv;
-  background: #d3d3d3; /* Grey background */
+  background: rgba(250, 250, 250, 0.3); /* Grey background */
   outline: none; /* Remove outline */
   opacity: 0.9; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
