--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -82,13 +82,13 @@
     </tr>
 </table>
 <form action="/{{func}}/" methhods=['POST']>
-    <a> learning rate: </a><input class="contact-field" name="lr" value ="{{lr}}" placeholder="learning rate" id="lr" width="50" disabled>
+    <a> learning rate: </a><input class="contact-field" name="lr" value ="{{lr}}" placeholder="learning rate" id="lr" size="8" disabled>
     <input type="range" min="1" max="100" value="0" class="slider" id="lr_slider" step="0.05">
-    <a> x: </a><input class="contact-field" id = "x" name="x" placeholder="x" width="50" disabled>
+    <a> x: </a><input class="contact-field" id = "x" name="x" placeholder="x" size="8" disabled>
     <input type="range" min="1" max="100" value="0" class="slider" id="x_slider" step="0.05">
-    <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y" width="50" disabled>
+    <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y" size="8" disabled>
     <input type="range" min="1" max="100" value="0" class="slider" id="y_slider" step="0.05">
-    <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs" type="number" min="1" step="1" width="50">
+    <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs" type="number" min="1" step="1" size="8">
     <select class="contact-field" id="SGD" name="opt">
         <option class="st" value="SGD">GD</option>
         <option class="st" value="MomentumSGD">MomentumSGD</option>
