--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -336,7 +336,7 @@
 					}
                 var zval= Math.min(zMax/2,f_start[2]*1.4);
                 camera.set("position",[((0-f_start[0])/4)*1.2,zval,((0-f_start[1])/4)*1.2]);
-                camera.set("lookAt",[f_start[0],f_start[2],f_start[1]])
+                camera.set("lookAt",[f_start[0],f_start[2],f_start[1]]);
 			}
 		}
 			displayTrace = !displayTrace;
@@ -383,7 +383,7 @@
 					}
             var zval= Math.min(zMax/2,f_start[2]*1.4);
             camera.set("position",[((0-f_start[0])/4)*1.2,zval,((0-f_start[1])/4)*1.2]);
-            camera.set("lookAt",[f_start[0],f_start[2],f_start[1]])
+            camera.set("lookAt",[f_start[0],f_start[2],f_start[1]]);
 			}
 			displayTrace = !displayTrace;
 		if(currCurveNum==0){
