--- a/templates/intro.html
+++ b/templates/intro.html
@@ -55,9 +55,9 @@
                             </ul>
                         </li>
                         <li class="submenu">
-                            <a href="javascript:;">Introduction</a>
+                            <a href="javascript:;">Deep Learning</a>
                             <ul>
-                                <li><a href="deepLearning.html">Deep Learning</a></li>
+                                <li><a href="deepLearning.html">Introduction</a></li>
                             </ul>
                         </li>
                         <li class="submenu">
