added ty it button

--- a/templates/intro.html
+++ b/templates/intro.html
@@ -180,7 +180,7 @@
         </h5>
     </section>
 <section class="section" id="course5">
-    <iframe src="https://i-learn-ml.oa.r.appspot.com/SVM/" width="100%" height="700" scrolling="no"> </iframe>
+    <center><a href="https://i-learn-ml.oa.r.appspot.com/iLearnML/playground.htmlhttps://i-learn-ml.oa.r.appspot.com/iLearnML/playground.html"><button class="main-button"><h2>try it!</h2></button></a></center>
 </section>
 
 
