fixed a problem with gaussian

--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -333,12 +333,7 @@
 							color: "white", width: 8, end: true, visible: true, points: vecData
 						}));
 					}
-                if(zMax>0){
-                    var zval= Math.min(zMax/2,f_start[2]*1.4);
-                }else{
-                    var zval= Math.max(zMax/2,f_start[2]*1.4);
-                }
-
+                var zval= Math.min(zMax/2,f_start[2]);
                 camera.set("position",[((0-f_start[0])/4)*1.6,zval,((0-f_start[1])/4)]);
                 camera.set("lookat",[f_start[0],f_start[2],f_start[1]]);
 			}
@@ -385,11 +380,7 @@
 
 						}
 					}
-            if(zMax>0){
-                var zval= Math.min(zMax/2,f_start[2]*1.4);
-            }else{
-                var zval= Math.max(zMax/2,f_start[2]*1.4);
-            }
+            var zval= Math.min(zMax/2,f_start[2]);
             camera.set("position",[((0-f_start[0])/4)*1.6,zval,((0-f_start[1])/4)]);
             camera.set("lookat",[f_start[0],f_start[2],f_start[1]]);
 			}
