added the new deep learning network page

--- a/templates/svm.html
+++ b/templates/svm.html
@@ -70,7 +70,7 @@
                         <li class="submenu">
                             <a href="javascript:;">Learning</a>
                             <ul>
-                                <li><a href="svm.htmls">SVM</a></li>
+                                <li><a href="svm.html">SVM</a></li>
                             </ul>
                         </li>
                     </ul>
