hopefully fixed the gaussian problem

--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -334,12 +334,12 @@
 						}));
 					}
                 if((zMax-zMin)>0){
-                    var zval= Math.min((zMax-zMin)/2,f_start[2]);
+                    var zval= Math.min((zMax-zMin)/2,parseFloat(f_start[2]));
                 }else{
-                    var zval= Math.max((zMax-zMin)/2,f_start[2]);
+                    var zval= Math.max((zMax-zMin)/2,parseFloat(f_start[2]));
                 }
-                camera.set("position",[((0-f_start[0])/4)*1.6,zval,((0-f_start[1])/4)]);
-                camera.set("lookat",[f_start[0],f_start[2],f_start[1]]);
+                camera.set("position",[((0-parseFloat(f_start[0]))/4)*1.6,zval,((0-parseFloat(f_start[1]))/4)]);
+                camera.set("lookat",[parseFloat(f_start[0]),parseFloat(f_start[2]),parseFloat(f_start[1])]);
 			}
 		}
 			displayTrace = !displayTrace;
@@ -385,12 +385,12 @@
 						}
 					}
             if((zMax-zMin)>0){
-                var zval= Math.min((zMax-zMin)/2,f_start[2]);
+                var zval= Math.min((zMax-zMin)/2,parseFloat(f_start[2]));
             }else{
-                var zval= Math.max((zMax-zMin)/2,f_start[2]);
+                var zval= Math.max((zMax-zMin)/2,parseFloat(f_start[2]));
             }
-            camera.set("position",[((0-f_start[0])/4)*1.6,zval,((0-f_start[1])/4)]);
-            camera.set("lookat",[f_start[0],f_start[2],f_start[1]]);
+            camera.set("position",[((0-parseFloat(f_start[0]))/4)*1.6,zval,((0-parseFloat(f_start[1]))/4)]);
+            camera.set("lookat",[parseFloat(f_start[0]),parseFloat(f_start[2]),parseFloat(f_start[1])]);
 			}
 			displayTrace = !displayTrace;
 		if(currCurveNum==0){
