--- a/templates/intro.html
+++ b/templates/intro.html
@@ -42,38 +42,38 @@
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li class="scroll-to-section"><a href="index.html">Home</a></li>
-                        <li class="submenu">
-                            <a href="playground.html">Playground</a>
-                            <ul>
-                                <li><a href="playground.html#Func=Gaussian">Gaussian</a></li>
-                                <li><a href="playground.html#Func=Beale">Beale</a></li>
-                                <li><a href="playground.html#Func=Himmelblau">Himmelblau</a></li>
-                                <li><a href="playground.html#Func=Rosenbrock">Rosenbrock</a></li>
-                                <li><a href="playground.html#Func=ABS">ABS</a></li>
-                                <li><a href="playground.html#Func=Rastrigin">Rastrigin</a></li>
-                            </ul>
-                        </li>
-                        <li class="submenu">
-                            <a href="javascript:;">Deep Learning</a>
-                            <ul>
-                                <li><a href="deepLearning.html">Introduction</a></li>
-                            </ul>
-                        </li>
-                        <li class="submenu">
-                            <a href="javascript:;">Optimizations</a>
-                            <ul>
-                                <li><a href="intro.html">Introduction</a></li>
-                                <li><a href="gd.html">Gradient Decent</a></li>
-                            </ul>
-                        </li>
-                        <li class="submenu">
-                            <a href="javascript:;">Learning</a>
-                            <ul>
-                                <li><a href="svm.html">SVM</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                            <li><a href="index.html" >Home</a></li>
+                            <li class="submenu">
+                                <a href="gd.html">Tutorial GD</a>
+                                 <ul>
+                                <li><a href="gd.html">Introduction</a></li>
+                                <li class="submenu">
+                                    <a href="playground.html">Playground</a>
+                                    <ul>
+                                        <li><a href="playground.html#Func=Gaussian">Gaussian</a></li>
+                                        <li><a href="playground.html#Func=Beale">Beale</a></li>
+                                        <li><a href="playground.html#Func=Himmelblau">Himmelblau</a></li>
+                                        <li><a href="playground.html#Func=Rosenbrock">Rosenbrock</a></li>
+                                        <li><a href="playground.html#Func=ABS">ABS</a></li>
+                                        <li><a href="playground.html#Func=Rastrigin">Rastrigin</a></li>
+                                    </ul>
+                                </li>
+                                </ul>
+                            </li>
+                            <li class="submenu" >
+                                <a href="intro.html" class="active">Tutorial SVM</a>
+                                <ul>
+                                    <li><a href="intro.html">Introduction</a></li>
+                                    <li><a href="svm.html">PlayGround</a></li>
+                                </ul>
+                            </li>
+                            <li class="submenu">
+                                <a href="deepLearning.html">Deep Learning</a>
+                                <ul>
+                                    <li><a href="deepLearning.html">Introduction</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
