--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -89,19 +89,21 @@
     <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y" size="8" readonly>
     <input type="range"  max="100" value="{{y}}" class="slider" id="y_slider" step="any">
     <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs" type="number" min="1" step="1" size="8">
-    <select class="contact-field" id="SGD" name="opt">
+    <select class=\"contact-field\" id="SGD" name="opt">
         <script>
+
         var versionPlayground = "{{versionPlayground}}";
         if(versionPlayground != "Newton"){
-            document.write("<select class=\"contact-field\" id=\"SGD\" name=\"opt\">");
+            document.write("");
             document.write("<option class=\"st\" value=\"SGD\">GD</option>");
             document.write("<option class=\"st\" value=\"MomentumSGD\">MomentumSGD</option>");
-            document.write("</select>")
         }
         else{
             document.write("<input type=\"text\" value=\"Newton\" />");
         }
         </script>
+    </select>
+
     <button class="main-button" name="send" type="submit">Apply</button>
 </form>
 </div>
