--- a/templates/viewerNetworkpyver.html
+++ b/templates/viewerNetworkpyver.html
@@ -91,7 +91,7 @@
         <input type="range" min="1" max="10" value="{{sl}}" class="slider" id="sl_slider" step="1">
         <a> third layer: </a><input class="contact-field" id = "tl" name="tl" placeholder="tl" size="4" readonly>
         <input type="range" min="1" max="10" value="{{tl}}" class="slider" id="tl_slider" step="1">
-        <a> with_b: </a><select class="contact-field" id="b" name="b">
+        <br><a> with_b: </a><select class="contact-field" id="b" name="b">
             <option class="st" value="false">without_b</option>
             <option class="st" value="true">with_b</option>
         </select>
