fixed a minor bug

--- a/templates/viewerNetworkpyver.html
+++ b/templates/viewerNetworkpyver.html
@@ -107,7 +107,8 @@
 </div>
 <script>
     document.getElementById("paramForm").style.display = "none";
-    document.getElementById("SGD").value = "{{opt}}";
+    document.getElementById("activation").value = "{{activation}}";
+    document.getElementById("b").value = "{{b}}";
     var mathbox = mathBox({
         plugins: ['core', 'controls', 'cursor', 'mathbox'],
         controls: {klass: THREE.OrbitControls}
