--- a/templates/network.html
+++ b/templates/network.html
@@ -1,32 +1,4 @@
-<!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Template Mo">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-
-    <title>iLearnML</title>
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/templatemo-art-factory.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/owl-carousel.css">
-    <link rel = "icon" href ="assets/images/title_icon.png" type = "image/x-icon">
-</head>
-
-<body>
-
-<!-- ***** Preloader Start ***** -->
-<div id="preloader">
-    <div class="jumper">
-        <div></div>
-        <div></div>
-        <div></div><!DOCTYPE html>
-        <html lang="en">
 
         <head>
 
@@ -97,7 +69,7 @@
                                 <li class="submenu">
                                     <a href="javascript:;">Learning</a>
                                     <ul>
-                                        <li><a href="svm.htmls">SVM</a></li>
+                                        <li><a href="svm.html">SVM</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -124,9 +96,9 @@
 
         <section id="pg">
             <br>
-            <center><h2>SVM</h2></center>
+            <center><h2>Neural Network</h2></center>
             <br>
-            <iframe src="https://i-learn-ml.oa.r.appspot.com/SVM/" width="100%" height="85%" scrolling="no" id="ifrm"> </iframe>
+            <iframe src="https://i-learn-ml.oa.r.appspot.com/NN/" width="100%" height="85%" scrolling="no" id="ifrm"> </iframe>
         </section>
 
         <script>
@@ -163,117 +135,5 @@
         <!-- Global Init -->
         <script src="assets/js/custom.js"></script>
 
-        </body>
-        </html>
-    </div>
-</div>
-<!-- ***** Preloader End ***** -->
-
-
-<!-- ***** Header Area Start ***** -->
-<header class="header-area header-sticky">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
-                    <a href="#" class="logo">iLearnML</a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
-                    <ul class="nav">
-                        <li class="scroll-to-section"><a href="index.html">Home</a></li>
-                        <li class="submenu">
-                            <a href="#course4">Playground</a>
-                            <ul>
-                                <li><a href="javascript:document.getElementById('Func').value='Gaussian';changeFunc();document.getElementById('course4').scrollIntoView();">Gaussian</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Beale';changeFunc();document.getElementById('course4').scrollIntoView();">Beale</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Himmelblau';changeFunc();document.getElementById('course4').scrollIntoView();">Himmelblau</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Rosenbrock';changeFunc();document.getElementById('course4').scrollIntoView();">Rosenbrock</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='ABS';changeFunc();document.getElementById('course4').scrollIntoView();">ABS</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Rastrigin';changeFunc();document.getElementById('course4').scrollIntoView();">Rastrigin</a></li>
-                            </ul>
-                        </li>
-                        <li class="submenu">
-                            <a href="javascript:;">Deep Learning</a>
-                            <ul>
-                                <li><a href="deepLearning.html">Introduction</a></li>
-                            </ul>
-                        </li>
-                        <li class="submenu">
-                            <a href="javascript:;">Optimizations</a>
-                            <ul>
-                                <li><a href="intro.html">Introduction</a></li>
-                                <li><a href="gd.html">Gradient Decent</a></li>
-                            </ul>
-                        </li>
-                        <li class="submenu">
-                            <a href="javascript:;">Learning</a>
-                            <ul>
-                                <li><a href="svm.html">SVM</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <a class='menu-trigger'>
-                        <span>Menu</span>
-                    </a>
-                    <!-- ***** Menu End ***** -->
-                </nav>
-            </div>
-        </div>
-    </div>
-</header>
-<!-- ***** Header Area End ***** -->
-
-<div class="section" id="welcome2">
-
-    <!-- ***** Header Text Start ***** -->
-    <!-- ***** Header Text End ***** -->
-</div>
-<!-- ***** Welcome Area End ***** -->
-
-
-<!-- ***** Features Big Item Start ***** -->
-
-<section id="pg">
-    <br>
-    <center><h2>Network</h2></center>
-    <br>
-    <iframe src="https://i-learn-ml.oa.r.appspot.com/Network/" width="100%" height="85%" scrolling="no" id="ifrm"> </iframe>
-</section>
-
-<script>
-    var changeFunc= function(){
-        var url = "https://i-learn-ml.oa.r.appspot.com/";
-        var func = document.getElementById('Func').value;
-        var ifrm = document.getElementById('ifrm');
-        ifrm.src = url+func;
-    }
-    var hashParams = window.location.hash;
-    hashParams = hashParams.substr(1).split('&');// substr(1) to remove the `#`
-    for (var i = 0; i < hashParams.length; i++) {
-        var p = hashParams[i].split('=');
-        if (p[0]!= null) {
-            document.getElementById(p[0]).value = decodeURIComponent(p[1]);
-        }
-    }
-</script>
-
-<!-- jQuery -->
-<script src="assets/js/jquery-2.1.0.min.js"></script>
-
-<!-- Bootstrap -->
-<script src="assets/js/popper.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-
-<!-- Plugins -->
-<script src="assets/js/owl-carousel.js"></script>
-<script src="assets/js/scrollreveal.min.js"></script>
-<script src="assets/js/waypoints.min.js"></script>
-<script src="assets/js/jquery.counterup.min.js"></script>
-<script src="assets/js/imgfix.min.js"></script>
-
-<!-- Global Init -->
-<script src="assets/js/custom.js"></script>
-
-</body>
+     </body>
 </html>
