--- a/templates/viewerNetworkpyver.html
+++ b/templates/viewerNetworkpyver.html
@@ -329,7 +329,7 @@
             scale: [2,1,2],
         }
     );
-    
+
     // axes
     var xAxis = view.axis( {axis: 1, width: 8, detail: 40, color:"red"} );
     var xScale = view.scale( {axis: 1, divide: 10, nice:true, zero:true} );
@@ -416,7 +416,7 @@
     lrtext.value = slidelr.value;
     fltext.value = slidefl.value;
     sltext.value = slidesl.value;
-    tltext.value = tlidesl.value;
+    tltext.value = slidetl.value;
     slidelr.oninput = function() {
         lrtext.value = this.value;
     }
