--- a/templates/viewerNetworkpyver.html
+++ b/templates/viewerNetworkpyver.html
@@ -101,7 +101,7 @@
             <option class="st" value="sigmoid">sigmoid</option>
         </select>
         <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs" type="number" min="1" step="1" size="8">
-        <a>epochs:</a><input class="contact-field" id = "batch" value ="{{batch}}" name="batch" placeholder="batch size" type="number" min="1" step="1" size="8">
+        <a>batch size: </a><input class="contact-field" id = "batch" value ="{{batch}}" name="batch" placeholder="batch size" type="number" min="1" step="1" size="8">
         <button class="main-button" name="send" type="submit">Apply</button>
     </form>
 </div>
@@ -143,6 +143,7 @@
             for (var i = 0; i < hashParams.length; i++) {
                 var p = hashParams[i].split('=');
                 if (p[0] == "points") {
+                    p[1]= p[1].substr(1)
                     points = p[1].split('|');
                     for (var j = 0; j < points.length; j++) {
                         points[j] = points[j].split('%');
